examples/test/testpolicy18500.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18500
  namespace: namespace100
spec:
  podSelector:
    matchLabels:
      key27: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value6
          key23: value28
      podSelector:
        matchLabels:
          key40: value27
          key15: value23
          key29: value13
